# primordia

./: .env.example  CLAUDE.md  FILTER-STATUS.md  INFILTRATION.md  PUBLISH.md  README.md  SHIP.md  STRATEGY.md  docker-compose.yml  leads.template.csv  package.json
agents/: adversary-tester.js  canonicalization-engine.js  cashloop-operator.js  clearing-kernel-builder.js  conformance-validator.js  crypto-core.js  distro-publisher.js  economics-calibrator.js  health-monitor.js  integration-snippets.js  release-engine.js  sdk-py-forge.js  sdk-ts-forge.js  spec-smith.js
clearing-kernel/: .env.example  .gitignore  API-ENDPOINTS.md  BUILD-COMPLETE.md  CASHIER-QUICK-REF.md  CASHIER-SYSTEM.md  Dockerfile  IMPLEMENTATION.md  README.md  fly.toml  package-lock.json  package.json  primordia-clearing-kernel-0.1.0.tgz  primordia-clearing-kernel-1.0.0.tgz  railway.json  test-cashier.sh  test-endpoints.sh
conformance/: CONFORMANCE-SUMMARY.md  README.md  cross-lang.bat  cross-lang.js  cross-lang.sh  generate-vectors.ts  package-lock.json  package.json  results.json  run.js  run.py  run.ts  tsconfig.json  vectors.json
daemons/: cash-daemon.js  cash-daemon.ts  conformance-daemon.ts  distro-daemon.js  distro-daemon.ts  flow-daemon.ts  primordia-daemon.js  primordia-daemon.ts  rotate-daemon.ts  rotation-daemon.ts  ship-daemon.js
hooks/: blake3-stability.js  canonical-json.js  conformance-vectors.js  credit-gate.js  dist-integrity.js  fc-schema.js  ian-conservation.js  kernel-smoke.js  mbs-consistency.js  msr-schema.js  netting-determinism.js  remote-conformance.js  sdk-py-smoke.js  sdk-ts-smoke.js  signature-roundtrip.js  stripe-webhook.js  version-monotonic.js  zero-ui.js
host-adapter-chargeback/: package-lock.json  package.json  tsconfig.json
leads/: distribution-channels.md  outreach-template.md  targets.md
mcp-server/: .gitignore  .npmignore  README.md  package-lock.json  package.json  primordia-mcp-server-0.1.0.tgz  smithery.yaml
orchestrator/: primordia.cmd  primordia.js  primordia.ts
runtime-hook-py/: BUILD.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  pyproject.toml  setup.py  verify.py
runtime-hook-py/examples/: basic_usage.py  openai_integration.py  paid_mode.py
runtime-hook-py/primordia_runtime_hook/: __init__.py
runtime-hook-py/tests/: __init__.py  test_hook.py
runtime-hook-ts/: LICENSE  (+4 more)
sdk-py/: README.md  SDK_COMPLETE.md  pyproject.toml
sdk-py/primordia/: acr.py
sdk-py/primordia_sdk/: __init__.py  amr.py  canonical.py  crypto.py  dbp.py  fc.py  ian.py  mbs.py  meter.py  msr.py  netting.py
(+108 files in other folders)
